fixed navbar to top and corrected css to display it correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;  
+  padding-top: 70px;
   /*text-shadow: 0 0 10px black;*/
   
   /*color: #EFD469;*/
