--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ body {
 }
 
 h1, h3 {
-	color: #747704;
+	color: #FEFEFE;
 }
 
 h2 {
@@ -45,7 +45,7 @@ h2 {
 hr {
 	border: none;
 	height: 5px;
-	color: #BCBBBB;
+	color: #000000;
 }
 
 i {
@@ -55,6 +55,10 @@ i {
 /*ul {
 	padding: 0;
 }*/
+
+li:hover {
+	background: #08BFFF;
+}
 
 img {
 	max-width: 100%
